--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "next": "^9.3.4",
+    "next-offline": "^5.0.0",
+    "next-pwa": "^2.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
