--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "My Miles",
-    "short_name": "my-miles",
+    "short_name": "My Miles",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
