--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "update-pages": "node gh-pages"
+    "export": "next export"
   },
   "author": "Diogo Fernandes",
   "license": "ISC",
