--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,21 @@
 {
-    "name": "My Miles",
-    "short_name": "My Miles",
-    "icons": [
-        {
-            "src": "/android-chrome-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/android-chrome-256x256.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        }
-    ],
-    "theme_color": "#5bbad5",
-    "background_color": "#5bbad5",
-    "display": "standalone"
+  "name": "Diário Nook World",
+  "short_name": "Diário",
+  "icons": [
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    }
+  ],
+  "theme_color": "#5bbad5",
+  "background_color": "#5bbad5",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait"
 }
