--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@nook-world/data": "^0.2.2",
+    "fathom-client": "^2.0.3",
     "next": "^9.3.4",
     "next-pwa": "^2.3.3",
     "react": "^16.13.1",
