ci: fix workflow variable name

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: 🏗  Build Application
         run: |
-          echo "Using Analytics ID: $FATHOM_SIDE_ID"
+          echo "Using Analytics ID: $FATHOM_SITE_ID"
           npm run build
         env:
           FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
