--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,18 @@
   "short_name": "Diário",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/diario-icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-256x256.png",
+      "src": "/diario-icon-256.png",
       "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/diario-icon-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
