--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,8 +18,8 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#5bbad5",
-  "background_color": "#5bbad5",
+  "theme_color": "#f3f1e3",
+  "background_color": "#f3f1e3",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
